--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:7.3-fpm
 
+ENV LANG C.UTF-8
+
 RUN apt-get update \
     && apt-get install -y libzip-dev zlib1g-dev mariadb-client \
     && docker-php-ext-install zip pdo_mysql opcache
