画像投稿と表示(ローカル環境)
・create.blade.phpのフォームに画像アップロード用フィールドを追加しました。
・RecipeController@storeを編集し、ローカル環境向けに画像を保存できるように設定しました。
・docker-compose.yml内、アップロード画像用にnginxのマウント設定を追加し、Nginxの設定ファイルにてマウント先へのエイリアスを作成しました。
・show.blade.phpから分離したshow_image.blade.phpにて、画像を表示できるようにしました。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
         volumes:
             - ./nginx/conf.d:/etc/nginx/conf.d
             - ./code/public:/public
+            - ./code/storage/app/public:/public/uploads
         depends_on:
             - php
     db:
