--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -15,6 +15,9 @@ server {
     location /images/ {
         alias /public/images/;
     }
+    location /uploads/ {
+        alias /public/uploads/;
+    }
     location /fonts/ {
         alias /public/fonts/;
     }
