--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -6,6 +6,8 @@ server {
     charset utf-8;
     #access_log  /var/log/nginx/host.access.log  main;
 
+    client_max_body_size 16M;
+
     location /css/ {
         alias /public/css/;
     }
