S3画像アップロードの設定
・composerにてflysytem-aws-s3をインストールしました。また、インストール用にphp.iniのメモリの上限を開放しました。
・Recipe.phpにて画像アップロードの環境別条件分岐の設定を記述し、RecipeControllerから呼び出せるようにしました。
・各画像表示部にも環境による条件分岐の設定を行いました。

--- a/code/php.ini
+++ b/code/php.ini
@@ -5,6 +5,7 @@ display_errors = on
 display_startup_errors = on
 log_errors = on
 error_log = /dev/stderr
+memory_limit = -1
 
 upload_max_filesize = 128M
 post_max_size = 128M
