SSL関連設定の解除
・エラーの原因を突き止めるため、一時的にSSL通信に関連する設定群を解除しました。

--- a/nginx/prd_conf.d/default.conf
+++ b/nginx/prd_conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
-    listen       80 443;
-    listen  [::]:80 [::]:443;
-    server_name  localhost 127.0.0.1 lilliputs-hy.com;
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost 127.0.0.1;
 
     charset utf-8;
     #access_log  /var/log/nginx/host.access.log  main;
