--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -4,7 +4,7 @@ ENV LANG C.UTF-8
 
 RUN apt-get update \
     && apt-get install -y libzip-dev zlib1g-dev mariadb-client libpng-dev libmcrypt-dev libjpeg-dev libfreetype6-dev \
-    && docker-php-ext-install zip pdo_mysql opcacheZz
+    && docker-php-ext-install zip pdo_mysql opcache
 
 RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
